2013-07-12  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineTreeView.h:
	* OutlineTreeModel.h:
	* OutlineSelection.h:
	* OutlineTreeView.cpp:
	* OutlineSelection.cpp:
	* OutlineTreeModel.cpp: 

2013-07-12  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineTreeView.h:
	* OutlineTreeModel.h:
	* OutlineTreeView.cpp:
	* OutlineTreeModel.cpp: 

2013-07-12  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineTreeView.h:
	* OutlineUserData.h:
	* OutlineSelection.h:
	* OutlineTreeView.cpp:
	* OutlineSelection.cpp: 

2013-07-12  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineTree.h:
	* OutlineTreeView.h:
	* OutlineUserData.h:
	* OutlineIterData.h:
	* OutlineTreeModel.h:
	* OutlineSelection.h:
	* OutlineTreeView.cpp:
	* OutlineSelection.cpp:
	* OutlineTreeModel.cpp: 

2013-07-12  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineTreeView.h:
	* OutlineTreeModel.h:
	* OutlineTreeView.cpp:
	* OutlineTreeModel.cpp: 

2013-07-11  Holger Seelig  <holger.seelig@yahoo.de>

	* HistoryEditor.cpp:
	* OutlineTreeModel.cpp:
	* ViewpointEditor.cpp: 

2013-07-11  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineTreeView.h:
	* OutlineUserData.h:
	* OutlineTreeModel.h:
	* OutlineTreeView.cpp:
	* OutlineTreeModel.cpp: 

2013-07-11  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineTreeView.h:
	* OutlineUserData.h:
	* OutlineTreeView.cpp:
	* OutlineTreeModel.cpp: 

2013-07-11  Holger Seelig  <holger.seelig@yahoo.de>

	* date.wrl:
	* gears.wrl: 

2013-07-11  Holger Seelig  <holger.seelig@yahoo.de>

	* main.cpp:
	* Image.h:
	* BrowserWindow.h:
	* X3DBaseInterface.h:
	* X3DUserInterface.h:
	* History.cpp:
	* BrowserWindow.cpp:
	* X3DUserInterface.cpp:
	* X3DBrowserWindow.h:
	* X3DBrowserWindow.cpp:
	* ViewpointMenuItem.cpp:
	* X3DConsoleUI.h:
	* OutlineEditor.h:
	* HistoryEditor.h:
	* OutlineTreeView.h:
	* X3DConsoleUI.cpp:
	* Configuration.cpp:
	* HistoryEditor.cpp:
	* OutlineEditor.cpp:
	* OutlineTreeModel.h:
	* OutlineSelection.h:
	* ViewpointEditor.h:
	* OutlineTreeView.cpp: