@@ -1,5 +1,9 @@
 2013-07-12  Holger Seelig  <holger.seelig@yahoo.de>
 
+	* OutlineTreeModel.cpp: 
+
+2013-07-12  Holger Seelig  <holger.seelig@yahoo.de>
+
 	* OutlineTreeView.h:
 	* OutlineTreeModel.h:
 	* OutlineSelection.h:
